add title and description to workgroups and update specs

--- a/app/views/workgroups/_form.html.erb
+++ b/app/views/workgroups/_form.html.erb
@@ -10,8 +10,12 @@
       </ul>
     </div>
   <% end %>
-
+  <%= f.label :title %>:
+  <%= f.text_field :title %><br />
+  <%= f.label :description %>:
+  <%= f.text_field :description %><br />
   <div class="actions">
+    
     <%= f.submit %>
   </div>
 <% end %>
