--- a/app/views/workgroups/show.html.erb
+++ b/app/views/workgroups/show.html.erb
@@ -1,2 +1,6 @@
+<p>Title: <%= @workgroup.title %></p>
+<p>Description: <%= @workgroup.description %></p>
+
+
 <%= link_to 'Edit', edit_workgroup_path(@workgroup) %> |
 <%= link_to 'Back', workgroups_path %>
