Add users and roles to workgroups

--- a/app/views/workgroups/show.html.erb
+++ b/app/views/workgroups/show.html.erb
@@ -3,4 +3,7 @@
 
 
 <%= link_to 'Edit', edit_workgroup_path(@workgroup) %> |
-<%= link_to 'Back', workgroups_path %>
+<%= link_to 'Back', workgroups_path %> |
+<%= link_to 'Add Member', new_workgroup_membership_path(id: @workgroup.id) %>
+
+<%= render partial: 'workgroup_memberships/list_members' %>
