--- a/app/views/collection_exports/index.html.erb
+++ b/app/views/collection_exports/index.html.erb
@@ -1,9 +1,11 @@
+<% 'app/helpers/collection_export_helper.rb' %>
 <h1><%= t("collection_export.title") %></h1>
 
 <table class="table">
   <thead>
     <tr>
       <th scope="col"><%= t("collection_export.header.collection_id") %></th>
+      <th scope="col"><%= t("collection_export.header.title") %></th>
       <th scope="col"><%= t("collection_export.header.timestamp") %></th>
       <th scope="col"><%= t("collection_export.header.destroy") %></th>
       <th scope="col"><%= t("collection_export.header.download") %></th>
@@ -12,8 +14,10 @@
 
   <tbody>
     <% @collection_exports.each do |collection_export| %>
+
       <tr scope="row">
         <td><%= collection_export.collection_id %></td>
+        <td><%= collection_title(collection_export.collection_id) %></td>
         <td><%= collection_export.created_at %></td>
         <td><%= link_to t("collection_export.action.download"), collection_export_download_path(collection_export) %></td>
         <% if can? :destroy, collection_export %>
