Update to Hyrax gem version 2.1.0.rc1
Includes updated feature specs to match changes in Hyrax

--- a/app/views/hyrax/dashboard/collections/_show_actions.html.erb
+++ b/app/views/hyrax/dashboard/collections/_show_actions.html.erb
@@ -7,7 +7,7 @@
                 data: { turbolinks: false } %>
 <% end %>
 
-<% if presenter.collection_type_is_nestable? %>
+<% if presenter.collection_type_is_nestable? && presenter.user_can_nest_collection? %>
 <!-- The user should have deposit access to the parent and read access to the child (the collection we are already showing, so no test is necessary). -->
     <%= button_tag '',
                   class: 'btn btn-primary add-to-collection',
