--- a/app/views/hyrax/homepage/_featured_researcher.html.erb
+++ b/app/views/hyrax/homepage/_featured_researcher.html.erb
@@ -3,3 +3,4 @@
 <% else %>
   <%= t('hyrax.homepage.featured_researcher.missing') %>
 <% end %>
+<p><%= t('hyrax.homepage.featured_researcher.title') %></p>
