--- a/app/views/hyrax/homepage/_featured_works.html.erb
+++ b/app/views/hyrax/homepage/_featured_works.html.erb
@@ -17,4 +17,4 @@
     <%= render partial: 'featured', collection: @featured_work_list.featured_works %>
   </ol>
 <% end %>
-
+<p><%= t('hyrax.homepage.featured_works.title') %></p>
