--- a/app/views/hyrax/homepage/_featured.html.erb
+++ b/app/views/hyrax/homepage/_featured.html.erb
@@ -1,11 +1,6 @@
 <% presenter = featured.presenter %>
 <li class="featured-item" data-id="<%= presenter.id %>">
-  <div class="main row">
-    <div class="col-sm-3">
-      <%= render_thumbnail_tag presenter, { width: 90 } %>
-    </div>
-    <div class="col-sm-9">
-      <%= render 'hyrax/homepage/featured_fields', featured: presenter %>
-    </div>
+  <div class="center-block main row featured-thumb">
+    <%= render_thumbnail_tag presenter, { alt: "Featured work thumbnail: #{ presenter.title.first }" } %>
   </div>
 </li>
