--- a/app/views/_masthead.html.erb
+++ b/app/views/_masthead.html.erb
@@ -10,6 +10,9 @@
         <span class="icon-bar"></span>
       </button>
       <%= render '/logo' %>
+      <% unless controller_name == 'homepage' %>
+        <a class="navbar-brand" href ="/"><b> | <%= image_tag 'scholar-logo.png', id: 'scholar-nav-logo', alt: 'scholar@uc' %> </b></a>
+      <% end %>
     </div>
 
     <div class="collapse navbar-collapse" id="top-navbar-collapse">
