--- a/app/views/_logo.html.erb
+++ b/app/views/_logo.html.erb
@@ -1,4 +1,3 @@
-<a id="logo" class="navbar-brand" href="<%= hyrax.root_path %>" data-no-turbolink="true">
-  <span class="glyphicon glyphicon-globe"></span>
-  <span class="institution_name"><%= application_name %></span>
+<a id="logo" class="navbar-brand" href="http://www.uc.edu" target="_blank" data-no-turbolink="true">
+  <span><%= image_tag 'uc-logo-white.png', class: 'header-uc-logo' %></span>
 </a>
