--- a/app/views/hyrax/dashboard/profiles/_edit_primary.html.erb
+++ b/app/views/hyrax/dashboard/profiles/_edit_primary.html.erb
@@ -51,7 +51,7 @@
       <%= t('hyrax.user_profile.ucdepartment') %>
     <% end %>
     <div class="col-xs-8">
-       <%= f.text_field :ucdepartment, class: "form-control" %>
+       <%= f.text_field :ucdepartment, class: "form-control", readonly: true %>
     </div>
   </div>
 
@@ -60,9 +60,16 @@
       <%= t('hyrax.user_profile.uc_affiliation') %>
     <% end %>
     <div class="col-xs-8">
-       <%= f.text_field :uc_affiliation, class: "form-control" %>
+       <%= f.text_field :uc_affiliation, class: "form-control", readonly: true %>
     </div>
   </div>
+ 
+   <div class="form-group">
+      <%= f.label :email, 'Email', class: 'col-xs-4 control-label' %>
+      <div class="col-xs-8">
+         <%= f.text_field :email, class: "form-control", readonly: true %>
+      </div>
+    </div><!-- .form-group -->
 
   <div class="form-group">
     <%= f.label :alternate_email, class: 'col-xs-4 control-label' do %>
