add menus to nav for signed-in users

--- a/app/views/_user_util_links.html.erb
+++ b/app/views/_user_util_links.html.erb
@@ -1,5 +1,6 @@
 <ul id="user_utility_links" class="nav navbar-nav navbar-right">
   <%= render 'shared/locale_picker' if available_translations.size > 1 %>
+  <%= render '/toolbar' %>
   <% if user_signed_in? %>
     <li>
       <%= render_notifications(user: current_user) %>
