Modifies attribute rows to be more like scholar.
Removed my email address from the concern show spec.

Test troubleshooting in progress.

Fix rubocop issues.

Test fixes and rubocop

Added test to make sure that rights is shown.

--- a/app/views/hyrax/base/_attribute_rows.html.erb
+++ b/app/views/hyrax/base/_attribute_rows.html.erb
@@ -1,13 +1,14 @@
 <%= presenter.attribute_to_html(:creator, render_as: :faceted, html_dl: true) %>
-<%= presenter.attribute_to_html(:contributor, render_as: :faceted, html_dl: true) %>
-<%= presenter.attribute_to_html(:admin_set, render_as: :faceted, html_dl: true) %>
+<%= presenter.attribute_to_html(:submitter, render_as: :faceted, html_dl: true) %>
+<%= presenter.attribute_to_html(:contributor, html_dl: true) %>
+<%= presenter.attribute_to_html(:college, render_as: :faceted, html_dl: true) %>
+<%= presenter.attribute_to_html(:department, render_as: :faceted, html_dl: true) %>
 <%= presenter.attribute_to_html(:subject, render_as: :faceted, html_dl: true) %>
 <%= presenter.attribute_to_html(:publisher, render_as: :faceted, html_dl: true) %>
 <%= presenter.attribute_to_html(:language, render_as: :faceted, html_dl: true) %>
 <%= presenter.attribute_to_html(:identifier, render_as: :linked, search_field: 'identifier_tesim', html_dl: true) %>
-<%= presenter.attribute_to_html(:date_created, render_as: :linked, search_field: 'date_created_tesim', html_dl: true) %>
+<%= presenter.attribute_to_html(:date_created, render_as: :faceted, label: "Date Created", html_dl: true) %>
 <%= presenter.attribute_to_html(:related_url, render_as: :external_link, html_dl: true) %>
-<%= presenter.attribute_to_html(:source, html_dl: true) %>
 <%= presenter.attribute_to_html(:alternate_title, html_dl: true) %>
 <%= presenter.attribute_to_html(:journal_title, html_dl: true) %>
 <%= presenter.attribute_to_html(:issn, html_dl: true) %>
@@ -15,9 +16,8 @@
 <%= presenter.attribute_to_html(:required_software, html_dl: true) %>
 <%= presenter.attribute_to_html(:note, html_dl: true) %>
 <%= presenter.attribute_to_html(:genre, html_dl: true) %>
-<%= presenter.attribute_to_html(:geo_subject, html_dl: true) %>
+<%= presenter.attribute_to_html(:geo_subject, render_as: :faceted, label: "Geographic Subject", html_dl: true) %>
 <%= presenter.attribute_to_html(:degree, html_dl: true) %>
 <%= presenter.attribute_to_html(:advisor, html_dl: true) %>
-<%= presenter.attribute_to_html(:college, render_as: :faceted, html_dl: true) %>
-<%= presenter.attribute_to_html(:department, html_dl: true) %>
-<%= presenter.attribute_to_html(:rights_statement, html_dl: true) %>
+<%= presenter.attribute_to_html(:committee_member, html_dl: true) %>
+
