--- a/app/views/hyrax/file_sets/media_display/_video.html.erb
+++ b/app/views/hyrax/file_sets/media_display/_video.html.erb
@@ -4,7 +4,7 @@
       <video controls="controls" class="video-js vjs-default-skin" style="width:100%" data-setup="{}" controlsList="nodownload" preload="auto">
         <source src="<%= hyrax.download_path(file_set, file: 'webm') %>" type="video/webm" />
         <source src="<%= hyrax.download_path(file_set, file: 'mp4') %>" type="video/mp4" />
-        <source src="<%= hyrax.download_path(file_set, file: 'mp4') %>" />
+        <source src="<%= hyrax.download_path(file_set) %>" />
         Your browser does not support the video tag.
       </video>
       <%= link_to t('hyrax.file_set.show.downloadable_content.video_link'),
@@ -18,7 +18,7 @@
       <video controls="controls" class="video-js vjs-default-skin" style="width:100%" data-setup="{}" controlsList="nodownload" preload="auto">
         <source src="<%= hyrax.download_path(file_set, file: 'webm') %>" type="video/webm" />
         <source src="<%= hyrax.download_path(file_set, file: 'mp4') %>" type="video/mp4" />
-        <source src="<%= hyrax.download_path(file_set, file: 'mp4') %>" />  
+        <source src="<%= hyrax.download_path(file_set) %>" />  
         Your browser does not support the video tag.
       </video>
     </div>
