Makes links on work creation page the correct color.

--- a/app/assets/stylesheets/scholar.scss
+++ b/app/assets/stylesheets/scholar.scss
@@ -428,3 +428,12 @@ label[for=user_password] {
     margin-bottom: 20px;
   }
 }
+
+.btn-link {
+  color: #e00122;
+}
+
+#savewidget a {
+  color: #e00122;
+}
+ 
