--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -1,5 +1,5 @@
 <% content_for(:navbar) do %>
-  <%= render 'jumbotron' %>
+  <%= render 'hyrax/homepage/jumbotron' %>
 <% end %>
 
 <% content_for(:precontainer_content) do %>
