Update to hyrax 2.2.1

--- a/app/views/hyrax/dashboard/profiles/show.html.erb
+++ b/app/views/hyrax/dashboard/profiles/show.html.erb
@@ -1,5 +1,5 @@
 <% provide :page_header do %>
-  <h1><span class="fa fa-id-card"></span> <%= t("hyrax.admin.sidebar.profile") %></h1>
+  <h1><span class="fa fa-id-card" aria-hidden="true"></span> <%= t("hyrax.admin.sidebar.profile") %></h1>
   <% if can? :edit, current_user %>
     <div class="pull-right">
       <%= link_to hyrax.edit_dashboard_profile_path(@user), class: "btn btn-primary" do %>
