--- a/app/views/hyrax/dashboard/collections/_show_actions.html.erb
+++ b/app/views/hyrax/dashboard/collections/_show_actions.html.erb
@@ -3,8 +3,7 @@
     <%= link_to t('hyrax.collection.actions.edit.label'),
                 hyrax.edit_dashboard_collection_path(presenter),
                 title: t('hyrax.collection.actions.edit.desc'),
-                class: 'btn btn-primary',
-                data: { turbolinks: false } %>
+                class: 'btn btn-primary' %>
 <% end %>
 
 <% if presenter.display_feature_link? %>
