--- a/app/views/welcome_page/_student_welcome_text.erb
+++ b/app/views/welcome_page/_student_welcome_text.erb
@@ -1,10 +1,10 @@
-<h2 id="welcome-to-UCrate">Welcome to <%= t('hyrax.product_name') %>, UC Students</h2>
+<h2 id="welcome-to-Scholar">Welcome to <%= t('hyrax.product_name') %>, UC Students</h2>
 <p>Welcome to <%= t('hyrax.product_name') %>! On this page, you will learn how students can use <%= t('hyrax.product_name') %>.</p>
 
-<h3 id="what-is-UCrate">What is <%= t('hyrax.product_name') %>?</h3>
+<h3 id="what-is-Scholar">What is <%= t('hyrax.product_name') %>?</h3>
 <p><%= t('hyrax.product_name') %> is a digital repository that enables the University of Cincinnati community to share research and scholarly work with a worldwide audience and preserve it for the future. It provides free access to material written, produced, and researched by the UC community. Read more about the mission of <%= t('hyrax.product_name') %> on the <a href="/about">About page</a>. Get the latest updates on development of <%= t('hyrax.product_name') %> on our <a href="http://libapps.libraries.uc.edu/scholarblog/">Scholarblog</a>.</p>
 
-<h3 id="how-can-students-use-UCrate">How can students use <%= t('hyrax.product_name') %>?</h3>
+<h3 id="how-can-students-use-Scholar">How can students use <%= t('hyrax.product_name') %>?</h3>
 <p>Although only faculty and staff can submit content to <%= t('hyrax.product_name') %> at this time, students can log in and view material in the repository for research or classroom work. <%= t('hyrax.product_name') %> is constantly growing and includes information like published articles, photographs, manuscripts, datasets, posters and much more.</p>
 
 <p>In order to share scholarly output and creative works like capstone projects, students should work with a faculty member or advisor. Graduate students should continue to work with the <a href="http://grad.uc.edu/student-life/etd.html">Graduate School</a> for submission of electronic theses and dissertations.</p>
