--- a/app/views/welcome_page/_welcome_text.html.erb
+++ b/app/views/welcome_page/_welcome_text.html.erb
@@ -1,10 +1,10 @@
-<h2 id="welcome-to-Ucrate">Welcome to <%= t('hyrax.product_name') %></h2>
+<h2 id="welcome-to-Scholar">Welcome to <%= t('hyrax.product_name') %></h2>
 <p>Welcome to <%= t('hyrax.product_name') %>! On this page, you will learn how to use <%= t('hyrax.product_name') %>.</p>
 
-<h3 id="what-is-Ucrate">What is <%= t('hyrax.product_name') %>?</h3>
+<h3 id="what-is-Scholar">What is <%= t('hyrax.product_name') %>?</h3>
 <p><%= t('hyrax.product_name') %> is a digital repository that enables the University of Cincinnati community to share research and scholarly work with a worldwide audience and preserve it for the future. Read more about the mission of <%= t('hyrax.product_name') %> on the <a href="/about">About page</a>. Get the latest updates on development of <%= t('hyrax.product_name') %> on our <a href="http://libapps.libraries.uc.edu/scholarblog/">Scholarblog</a>. All users, including non-registered users, of <%= t('hyrax.product_name') %> are bound by the <a href="/terms">Terms of Use</a>.</p>
 
-<h3 id="what-types-of-content-should-i-submit-to-Ucrate">What types of content should I submit to <%= t('hyrax.product_name') %>?</h3>
+<h3 id="what-types-of-content-should-i-submit-to-Scholar">What types of content should I submit to <%= t('hyrax.product_name') %>?</h3>
 <p><%= t('hyrax.product_name') %> stores and preserves the scholarly output and creative works of UC faculty, staff, and students. Examples of appropriate content include, but are not limited to: <a href="https://en.wikipedia.org/wiki/Grey_literature">grey literature</a>, <a href="https://en.wikipedia.org/wiki/Preprint">pre-</a>, <a href="https://en.wikipedia.org/wiki/Postprint">post-</a>, and published versions of academic papers, manuscripts, senior design projects, posters, datasets, presentations, and other creative works. Content may be text, image, video, audio, or mixed-media in nature. Learn more about types of content you can share on the <a href="/coll_policy">Collection Policy</a>.</p>
 <p>Students should work with a faculty member to share scholarly output and creative works, such a capstone projects.</p>
 
