--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -7,7 +7,7 @@
 
     <div class="pull-right col-md-4" id="copyright">
       <span> &copy; <%= Date.today.year %> Samvera-Hyrax </span>
-      <br> Ucrate Version
+      <br> Scholar@UC Version
       <div class="version">
         ENV: <%= Rails.env %>
         <br> SHA: <%= GIT_SHA %>
