--- a/app/views/hyrax/batch_uploads/_form.html.erb
+++ b/app/views/hyrax/batch_uploads/_form.html.erb
@@ -6,9 +6,7 @@
                     } do |f| %>
   <% provide :files_tab do %>
     <p class="instructions"><%= t("hyrax.batch_uploads.files.instructions") %></p>
-    <p class="switch-upload-type"><%= t("hyrax.batch_uploads.files.upload_type_instructions") %>
-      <%= link_to t("hyrax.batch_uploads.files.button_label"), [main_app, :new, Hyrax.primary_work_type.model_name.singular_route_key] %>
-    </p>
+    <p class="switch-upload-type"> <%= t("hyrax.batch_uploads.files.upload_type_instructions") %><%= link_to "Add New " + @form.payload_concern.constantize.model_name.human.titleize, main_app.new_polymorphic_path(@form.payload_concern.constantize) %>.</p> 
   <% end %>
   <%= render 'hyrax/base/guts4form', f: f, tabs: %w[files metadata relationships] %>
   <%= f.hidden_field :payload_concern, value: @form.payload_concern %>
