--- a/app/views/hyrax/users/_search_form.html.erb
+++ b/app/views/hyrax/users/_search_form.html.erb
@@ -1,8 +1,8 @@
 <div>
   <% # this form is used on the public users page and the admin users page, so submit to current path %>
   <%= form_tag request.path, method: :get, class: "form-search" do %>
-    <label class="sr-only" for="user_search">Search Users</label>
-    <%= text_field_tag :uq, params[:uq], class: "q", placeholder: "Search Users", size: '30', type: "search", id: "user_search" %>
+    <label class="sr-only" for="user_search"><%= t('hyrax.users.search_placeholder') %></label>
+    <%= text_field_tag :uq, params[:uq], class: "q", placeholder: t('hyrax.users.search_placeholder'), size: '30', type: "search", id: "user_search" %>
     <%= hidden_field_tag :sort, params[:sort], id: 'user_sort' %>
     <%= render_hash_as_hidden_fields(search_state.params_for_search.except(:uq, :sort, :qt, :page, :utf8)) %>
     <button type="submit" class="btn btn-primary" id="user_submit"> 
