--- a/app/views/hyrax/base/_form_files.html.erb
+++ b/app/views/hyrax/base/_form_files.html.erb
@@ -3,7 +3,7 @@
         <noscript><input type="hidden" name="redirect" value="<%= main_app.root_path %>" /></noscript>
         <!-- The table listing the files available for upload/download -->
         <table role="presentation" class="table table-striped"><tbody class="files"></tbody></table>
-        <% if Hyrax.config.browse_everything? %>
+				<% if Hyrax.config.browse_everything? && !(f.object_name == 'batch_upload_item') %>
           <%= t('hyrax.base.form_files.local_upload_browse_everything_html', contact_href: link_to(t("hyrax.upload.alert.contact_href_text"), hyrax.contact_form_index_path)) %>
         <% else %>
           <%= t('hyrax.base.form_files.local_upload_html') %>
@@ -24,7 +24,7 @@
                     <span>Add folder...</span>
                     <input type="file" name="files[]" multiple directory webkitdirectory />
                 </span>
-                <% if Hyrax.config.browse_everything? %>
+								<% if Hyrax.config.browse_everything? && !(f.object_name == 'batch_upload_item') %>
                   <%= button_tag(type: 'button', class: 'btn btn-success', id: "browse-btn",
                     'data-toggle' => 'browse-everything', 'data-route' => browse_everything_engine.root_path,
                     'data-target' => "#{f.object.persisted? ? "#edit_#{f.object.model.model_name.param_key}_#{f.object.model.id}" : "#new_#{f.object.model.model_name.param_key}"}" ) do %>
