--- a/app/views/_controls.html.erb
+++ b/app/views/_controls.html.erb
@@ -1,17 +1,17 @@
 <nav class="navbar navbar-default navbar-static-top" role="navigation">
   <div class="container-fluid">
     <div class="row">
-      <ul class="nav navbar-nav col-sm-5 col-md-6">
+      <ul class="nav navbar-nav col-sm-5">
         <li <%= 'class=active' if current_page?(hyrax.users_path) %>>
-          <%= link_to(t(:'hyrax.controls.users'), hyrax.users_path) %></li>
+          <%= link_to t(:'hyrax.controls.users'), hyrax.users_path, aria: current_page?(hyrax.users_path) ? {current: 'page'} : nil %></li>
         <li <%= 'class=active' if current_page?(hyrax.about_path) %>>
-          <%= link_to(t(:'hyrax.controls.about'), hyrax.about_path) %></li>
+          <%= link_to t(:'hyrax.controls.about'), hyrax.about_path, aria: current_page?(hyrax.about_path) ? {current: 'page'} : nil %></li>
         <li <%= 'class=active' if current_page?(hyrax.contact_path) %>>
-          <%= link_to(t(:'hyrax.controls.contact'), hyrax.contact_path) %></li>
-        <li <%= 'class=active' if action_name == "help" %>>
-          <%= link_to t(:'hyrax.controls.help'), hyrax.help_path %></li>
+          <%= link_to t(:'hyrax.controls.contact'), hyrax.contact_path, aria: current_page?(hyrax.contact_path) ? {current: 'page'} : nil %></li>
+        <li <%= 'class=active' if current_page?(hyrax.help_path) %>>
+          <%= link_to t(:'hyrax.controls.help'), hyrax.help_path, aria: current_page?(hyrax.help_path) ? {current: 'page'} : nil %></li>
       </ul>
-      <div class="searchbar-right navbar-right col-sm-7 col-md-6">
+      <div class="searchbar-right navbar-right col-sm-7">
         <%= render partial: 'catalog/search_form' %>
       </div>
     </div>
