--- a/app/views/_masthead.html.erb
+++ b/app/views/_masthead.html.erb
@@ -1,22 +1,24 @@
 <%= render '/shared/select_work_type_modal' if create_work_presenter.many? %>
-<nav id="masthead" class="navbar navbar-inverse navbar-static-top" role="navigation">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#top-navbar-collapse" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <%= render '/logo' %>
-      <% unless controller_name == 'homepage' %>
-        <a class="navbar-brand" href ="/"><b> | <%= image_tag 'scholar-logo.png', id: 'scholar-nav-logo', alt: 'scholar@uc' %> </b></a>
-      <% end %>
-    </div>
+<header>
+  <nav id="masthead" class="navbar navbar-inverse navbar-static-top" role="navigation">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#top-navbar-collapse" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <%= render '/logo' %>
+        <% unless controller_name == 'homepage' %>
+          <a class="navbar-brand" href ="/"><b> | <%= image_tag 'scholar-logo.png', id: 'scholar-nav-logo', alt: 'scholar@uc' %> </b></a>
+        <% end %>
+      </div>
 
-    <div class="collapse navbar-collapse" id="top-navbar-collapse">
-      <%= render '/user_util_links' %>
+      <div class="collapse navbar-collapse" id="top-navbar-collapse">
+        <%= render '/user_util_links' %>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
+</header>
