--- a/app/views/hyrax/file_sets/show.html.erb
+++ b/app/views/hyrax/file_sets/show.html.erb
@@ -1,3 +1,4 @@
+<% provide :page_title, @presenter.page_title %>
 <div class="container-fluid">
   <div class="row">
     <div class="col-xs-12 col-sm-4">
