--- a/app/views/hyrax/base/_form_files.html.erb
+++ b/app/views/hyrax/base/_form_files.html.erb
@@ -16,13 +16,13 @@
                 <span id="addfiles" class="btn btn-success fileinput-button">
                     <span class="glyphicon glyphicon-plus"></span>
                     <span>Add files...</span>
-                    <input type="file" name="files[]" multiple />
+                    <input type="file" name="files[]" multiple aria-labelledby="addfiles" />
                 </span>
                 <!-- The fileinput-button span is used to style the file input field as button -->
                 <span id="addfolder" class="btn btn-success fileinput-button">
                     <span class="glyphicon glyphicon-plus"></span>
                     <span>Add folder...</span>
-                    <input type="file" name="files[]" multiple directory webkitdirectory />
+                    <input type="file" name="files[]" multiple directory webkitdirectory aria-labelledby="addfolder" />
                 </span>
 								<% if Hyrax.config.browse_everything? && !(f.object_name == 'batch_upload_item') %>
                   <%= button_tag(type: 'button', class: 'btn btn-success', id: "browse-btn",
