Restructured file uploader, added new CSS classes

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -42,3 +42,12 @@
  div[class*="_admin_set_id"] {
   display: none;
  }
+
+ .break-all  {
+    display: inline-block;
+    word-break: break-all;
+ }
+
+ .auto-width-overide  {
+    width: auto !important;
+ }
