--- a/app/views/hyrax/batch_uploads/_form.html.erb
+++ b/app/views/hyrax/batch_uploads/_form.html.erb
@@ -14,7 +14,7 @@
 
 <script type="text/javascript">
   Blacklight.onLoad(function() {
-    $("#fileupload").fileupload('option', 'downloadTemplateId', 'batch-template-download')
+    $("#fileupload").fileupload('option', 'downloadTemplateId', 'template-download')
   });
 </script>
 
