Update Instructions for Students page

--- a/app/views/static/student_instructions.html.erb
+++ b/app/views/static/student_instructions.html.erb
@@ -45,7 +45,7 @@
   </p></br>
 
   <li>
-    Describe your work using the Basic Description section, some fields are required. Specific field notes below.
+    Describe your work using the Metadata section, some fields are required. Specific field notes below.
     <ul>
       <li>
         Type of Work – select the predominant format of your work.
@@ -54,7 +54,7 @@
         Creator – you will automatically be tagged as a creator, but you may add collaborators as needed.
       </li>
       <li>
-        Advisor or Sponsor – enter the name of your faculty advisor. (Last name first.)
+        Advisor – enter the name of your faculty advisor. (Last name first.)
       </li>
       <li>
         College and Program or Department – please select your degree granting College and enter the name of your degree program.
@@ -66,20 +66,11 @@
   </li></br>
 
   <li>
-    It is recommended that you describe your work using the Additional Fields section. You will have to click on the "Additional fields" button.  Your faculty advisor may have specific recommendations about how you describe your work.
-    <ul>
-      <li>
-        For example, use the subject field for your area of study, e.g. biology, literature, etc.
-      </li>
-    </ul>
-  </li></br>
-
-  <li>
     You may assign a Digital Object Identifier to your work. A DOI is intended to reference stable content and is a permanent URL that you may share and use in publications.
   </li></br>
 
   <li>
-    Add your faculty advisor or sponsor as a user with Edit access under the Share tab. Search for them by name or by email address. If your advisor has not yet logged in to <%=t('hyrax.product_name') %>, you will not find them – contact them and ask them to login.
+    Add your faculty advisor or sponsor as a user with Edit access under the Sharing tab. Search for them by name or by email address. If your advisor has not yet logged in to <%=t('hyrax.product_name') %>, you will not find them – contact them and ask them to login.
   </li>
   <p>
     <%= image_tag 'scholar_screens/content_editors_image.png', alt: 'Content Editors', title: 'Content Editors' %>
