Autopopulate college and department on proxy.

--- a/app/views/hyrax/base/_form_progress.html.erb
+++ b/app/views/hyrax/base/_form_progress.html.erb
@@ -23,7 +23,8 @@
     </div>
     <% if Flipflop.proxy_deposit? && current_user.can_make_deposits_for.any? %>
         <div class="list-group-item">
-          <%= f.input :on_behalf_of, collection: current_user.can_make_deposits_for.map(&:user_key), prompt: "Yourself" %>
+          <%= f.input :on_behalf_of, collection: current_user.can_make_deposits_for.map(&:user_key), 
+            prompt: "Yourself", onChange: 'setProxySelectionAsCreator(); setProxySelectionDeptAsDept(); setProxySelectionCollegeAsCollege()' %>
         </div>
     <% end %>
   </div>
