Implement DOI minting

--- a/app/assets/stylesheets/hyrax.scss
+++ b/app/assets/stylesheets/hyrax.scss
@@ -44,3 +44,11 @@ div.profile a.btn-primary {
 .orcid-section {
   padding-top: 20px;
 }
+
+.icon-doi {
+  @extend .fa-link;
+}
+
+.fix-radio-btns {
+  margin-left: 20px;
+}
