--- a/app/views/hyrax/base/show.html.erb
+++ b/app/views/hyrax/base/show.html.erb
@@ -33,6 +33,7 @@
             <%= render 'metadata', presenter: @presenter %>
           </div>
           <div class="col-sm-12">
+            <%= render 'doi', presenter: @presenter unless @presenter.doi.nil? %>
             <%= render 'relationships', presenter: @presenter %>
             <%= render 'items', presenter: @presenter %>
             <%# TODO: we may consider adding these partials in the future %>
