--- a/app/views/layouts/scholar/_partner_headline.html.erb
+++ b/app/views/layouts/scholar/_partner_headline.html.erb
@@ -1,5 +1,5 @@
 <div class="scholar-home-tag col-sm-12 text-center partners-text">
   <div class="scholar-home-tag-line">
-    <span class="line-thru">partners</span>
+    <span class="line-thru"><%= t('hyrax.homepage.partners') %></span>
   </div>
 </div>
