--- a/app/views/layouts/scholar/_scholar_headline.html.erb
+++ b/app/views/layouts/scholar/_scholar_headline.html.erb
@@ -1,14 +1,13 @@
 <div class="scholar-home-tag text-center">
   <div class="scholar-home-tag-line">
-    <span class="line-thru">what is <b>scholar<span style="color: #e00122">@</span>uc?</b></span>
+    <span class="line-thru"><%= t('hyrax.homepage.what_is') %> <b>scholar<span style="color: #e00122">@</span>uc?</b></span>
   </div>
   <div class="scholar-home-tag-desc row">
     <div class="col-sm-6 col-sm-offset-3">
-      Scholar@UC enables the UC community to share research and scholarly works with
-      a worldwide audience. The University of Cincinnati Libraries and IT@UC, with support from the Office of Research, are partnering to support Scholar@UC.
+      <%= t('hyrax.homepage.headline') %>
       <p>
         <%= link_to about_path do %>
-          <i>Learn more about Scholar@UC</i>
+          <i><%= t('hyrax.homepage.learn_more') %></i>
         <% end %>
       </p>
     </div>
