--- a/app/views/catalog/_search_form.html.erb
+++ b/app/views/catalog/_search_form.html.erb
@@ -4,7 +4,7 @@
   <div class="form-group">
 
     <div class="col-xs-4 col-sm-3 col-lg-2">
-      <%= link_to 'Browse', main_app.search_catalog_path, class: 'btn btn-primary nav-btn navbar-left' %>
+      <%= link_to t('hyrax.search.browse'), main_app.search_catalog_path, class: 'btn btn-primary nav-btn navbar-left' %>
     </div>
 
     <div class="input-group">
