--- a/app/views/hyrax/homepage/_jumbotron.html.erb
+++ b/app/views/hyrax/homepage/_jumbotron.html.erb
@@ -7,15 +7,15 @@
       <div class="clear-button-wrapper">
         <div class="row visible-xs">
           <div class="col-xs-6">
-            <a class="clear-button text-center" href="<%= main_app.new_classify_concern_path %>">Contribute</a>
+            <a class="clear-button text-center" href="<%= main_app.new_classify_concern_path %>"><%= t('hyrax.homepage.contribute') %></a>
           </div>
           <div class="col-xs-6">
-            <a class="clear-button text-center" href="<%= main_app.search_catalog_path %>">Browse</a>
+            <a class="clear-button text-center" href="<%= main_app.search_catalog_path %>"><%= t('hyrax.homepage.browse') %></a>
          </div>
         </div>
         <div class="hidden-xs">
-          <a id="contribute" class="clear-button text-center" href="<%= main_app.new_classify_concern_path %>">Contribute</a>
-          <a id="discover" class="clear-button text-center" href="<%= main_app.search_catalog_path%>">Browse</a>
+          <a id="contribute" class="clear-button text-center" href="<%= main_app.new_classify_concern_path %>"><%= t('hyrax.homepage.contribute') %></a>
+          <a id="discover" class="clear-button text-center" href="<%= main_app.search_catalog_path%>"><%= t('hyrax.homepage.browse') %></a>
         </div>
       </div>
     </div>
