--- a/app/views/_user_util_links.html.erb
+++ b/app/views/_user_util_links.html.erb
@@ -7,10 +7,10 @@
     </li>
     <li class="dropdown">
       <%= link_to hyrax.dashboard_profile_path(current_user), role: 'button', data: { toggle: 'dropdown' }, aria: { haspopup: true, expanded: false}, controls: 'user-util-links' do %>
-        <span class="sr-only"><%= t("hyrax.toolbar.profile.sr_action") %></span>
-        <span class="hidden-xs">&nbsp;<%= current_user.name %></span>
         <span class="sr-only"> <%= t("hyrax.toolbar.profile.sr_target") %></span>
         <span class="fa fa-user" aria-hidden="true"></span>
+        <span class="sr-only"><%= t("hyrax.toolbar.profile.sr_action") %></span>
+        <span>&nbsp;<%= current_user.name %></span>
         <span class="caret"></span>
       <% end %>
       <ul id="user-util-links" class="dropdown-menu dropdown-menu-right" role="menu">
