Enhances collections export feature.

--- a/app/views/hyrax/dashboard/sidebar/_tasks.html.erb
+++ b/app/views/hyrax/dashboard/sidebar/_tasks.html.erb
@@ -17,6 +17,6 @@
     <% end %>
   <% end %>
 
-  <%#= menu.nav_link(main_app.collection_exports_path) do %>
-    <!-- <span class="fa fa-flag" aria-hidden="true"></span> <span class="sidebar-action-text"><%= t('hyrax.collection.actions.manage_exports') %></span> -->
-  <%# end %>
+  <%= menu.nav_link(main_app.collection_exports_path) do %>
+    <span class="fa fa-flag" aria-hidden="true"></span> <span class="sidebar-action-text"><%= t('hyrax.collection.actions.manage_exports') %></span>
+  <% end %>
