--- a/app/views/collection_exports/index.html.erb
+++ b/app/views/collection_exports/index.html.erb
@@ -7,8 +7,8 @@
       <th scope="col"><%= t("collection_export.header.collection_id") %></th>
       <th scope="col"><%= t("collection_export.header.title") %></th>
       <th scope="col"><%= t("collection_export.header.timestamp") %></th>
-      <th scope="col"><%= t("collection_export.header.destroy") %></th>
       <th scope="col"><%= t("collection_export.header.download") %></th>
+      <th scope="col"><%= t("collection_export.header.destroy") %></th>
     </tr>
   </thead>
 
@@ -18,8 +18,8 @@
       <tr scope="row">
         <td><%= collection_export.collection_id %></td>
         <td><%= collection_title(collection_export.collection_id) %></td>
-        <td><%= collection_export.created_at %></td>
-        <td><%= link_to t("collection_export.action.download"), collection_export_download_path(collection_export) %></td>
+        <td><%= collection_export.created_at.localtime.strftime("%m/%d/%Y at %l:%M %p") %></td>
+        <td><%= link_to t("collection_export.action.download"), collection_export_download_path(collection_export), target: '_self' ,turbolinks: "false" %></td>
         <% if can? :destroy, collection_export %>
           <td><%= link_to t("collection_export.action.destroy"), collection_export, method: :delete, data: { confirm: t("collection_export.action.confirm_destroy") } %></td>
         <% end %>
