Add college field to user profile page

--- a/app/views/hyrax/users/_user_info.html.erb
+++ b/app/views/hyrax/users/_user_info.html.erb
@@ -56,6 +56,11 @@
     <dd><%= user.admin_area %></dd>
   <% end %>
 
+  <% if user.college != "Other" %>
+    <dt>College</dt>
+    <dd><%= user.college %></dd>
+  <% end %>
+
   <% if user.department.present? %>
     <dt>Department</dt>
     <dd><%= user.department %></dd>
