Update the welcome page

--- a/app/views/welcome_page/_welcome_text.html.erb
+++ b/app/views/welcome_page/_welcome_text.html.erb
@@ -9,7 +9,7 @@
 <p>Students should work with a faculty member to share scholarly output and creative works, such a capstone projects.</p>
 
 <h3 id="how-do-i-get-started">How do I get started?</h3>
-<p>After you have edited your profile page for the first time, you may share content by clicking on [Add New] from the menu.</p>
+<p>After you have edited your profile page for the first time, you may share content by clicking on [Works] then [New Work] from the menu.</p>
 
 <h3 id="where-do-i-go-for-more-information">Where do I go for more information?</h3>
 <p>Under the Help button on the main <%= t('hyrax.product_name') %> menu, you will find the following help topics:</p>
